--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ Options -Indexes
 RewriteEngine On
 
 RewriteRule ^staff$ ./staff.php [NC,L]
-ErrorDocument 404 ./
+ErrorDocument 404 http://localhost:8888/OFC/
